--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/bun": "latest",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "@types/shell-quote": "^1.7.5",
     "@vitejs/plugin-react": "^5.1.0",
     "concurrently": "^9.2.1",
     "vite": "^7.1.12"
@@ -16,10 +17,12 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "hono": "^4.10.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.9.5"
+    "react-router-dom": "^7.9.5",
+    "shell-quote": "^1.8.3"
   },
   "scripts": {
     "dev": "concurrently \"bun run dev:server\" \"bun run dev:client\"",
