--- a/package.json
+++ b/package.json
@@ -5,24 +5,39 @@
   "private": true,
   "devDependencies": {
     "@biomejs/biome": "2.3.2",
+    "@shadcn/ui": "^0.0.4",
     "@types/bun": "latest",
+    "@types/node": "^24.9.2",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@types/shell-quote": "^1.7.5",
     "@vitejs/plugin-react": "^5.1.0",
+    "autoprefixer": "^10.4.21",
     "concurrently": "^9.2.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.16",
     "vite": "^7.1.12"
   },
   "peerDependencies": {
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/postcss": "^4.1.16",
+    "@tailwindcss/vite": "^4.1.16",
+    "@tanstack/react-table": "^8.21.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "hono": "^4.10.4",
+    "lucide-react": "^0.552.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.5",
-    "shell-quote": "^1.8.3"
+    "shell-quote": "^1.8.3",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "scripts": {
     "dev": "concurrently \"bun run dev:server\" \"bun run dev:client\"",
