--- a/tsconfig.client.json
+++ b/tsconfig.client.json
@@ -2,7 +2,11 @@
 	"extends": "./tsconfig.json",
 	"compilerOptions": {
 		"lib": ["ESNext", "DOM", "DOM.Iterable"],
-		"jsx": "react-jsx"
+		"jsx": "react-jsx",
+		"baseUrl": ".",
+		"paths": {
+			"@/*": ["./src/client/*"]
+		}
 	},
 	"include": ["src/client/**/*", "src/shared/**/*"]
 }
