--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,12 @@
 		// Some stricter flags (disabled by default)
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-		"noPropertyAccessFromIndexSignature": false
+		"noPropertyAccessFromIndexSignature": false,
+
+		"baseUrl": ".",
+		"paths": {
+			"@/*": ["./src/client/*"]
+		}
 	},
 	"include": ["src/shared/**/*"],
 	"exclude": ["node_modules", "dist"]
