--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "concurrently": "^9.2.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.16",
+    "ultracite": "6.2.0",
     "vite": "^7.1.12"
   },
   "peerDependencies": {
