--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@hono/zod-validator": "^0.7.4",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.16",
@@ -38,7 +39,8 @@
     "react-router-dom": "^7.9.5",
     "shell-quote": "^1.8.3",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^4.1.12"
   },
   "scripts": {
     "dev": "concurrently \"bun run dev:server\" \"bun run dev:client\"",
