cleaning 'e v e r y t h i n g' ultracite hits - blind faith

--- a/biome.json
+++ b/biome.json
@@ -22,7 +22,8 @@
     "formatter": {
       "quoteStyle": "double"
     },
-    "jsxRuntime": "reactClassic"
+    "jsxRuntime": "reactClassic",
+    "globals": ["Bun"]
   },
   "assist": {
     "enabled": true,
