--- a/package.json
+++ b/package.json
@@ -23,12 +23,17 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@hono/trpc-server": "^0.4.0",
     "@hono/zod-validator": "^0.7.4",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.16",
     "@tailwindcss/vite": "^4.1.16",
+    "@tanstack/react-query": "^5.90.7",
     "@tanstack/react-table": "^8.21.3",
+    "@trpc/client": "^11.7.1",
+    "@trpc/react-query": "^11.7.1",
+    "@trpc/server": "^11.7.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
